# QMTools-pycuda

./: .gitignore  README.md  automaton_nn_simple.py  automaton_nn_singleshot.py  cidhelper.py  conda_env.yml  kernel_automaton.cu  kernel_automaton_nn.cu  kernel_common.h  kernel_density.cu  kernel_fft.cu  kernel_hartree.cu  kernel_nn_ss.cu  kernel_nuclear.cu  kernel_utils.cu  kernel_vne.cu  kernel_vne_classic.cu  pyproject.toml  qmtools.py  requirements.txt  test-hartree-fft.py  test-hartree-molecule.py  test-hartree-point.py  testgp.py  testnn.py  testnn_simple.py  train-singleshot.py
qmtools/: GAEngine.py  __init__.py  automaton_nn_simple.py  automaton_nn_singleshot.py  automaton_pytorch.py  cidhelper.py  diffusion.py  qmtools.py
qmtools/cuda/: kernel_automaton_nn.cu  kernel_common.h
qmtools/pt/: diffusion.py  gnn.py  grid.py  sr.py
scripts/: generate_densities.sh  generate_density_database.py  test-hartree-fft.py  test-hartree-molecule.py  test-hartree-point.py  test-singleshot.py  test-vneclassic.py  test.py  testgp.py  testnn.py  testnn_simple.py  train-singleshot.job  train-singleshot.py
scripts/automaton_pytorch/: compare_outputs.py  plot_losses.py  plot_pred_ref.py  test_cnn.py  test_nn_pytorch.py  train_automaton_cnn.py  train_automaton_pt.py
scripts/diffusion/: batch_train_sr.sh  batch_train_vae.sh  plot_losses.py  plot_losses_sr.py  plot_pred_ref.py  test_diffusion.py  train_sr.py  train_vae.py
scripts/grid_gnn/: batch_train_model.sh  divide_dataset.py  lr_search.py  plot_losses.py  plot_lr.py  test_grid_gnn.py  train_grid_gnn.py
(+12 files in other folders)
