[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "qmtools"
description = "QM Tools"
authors = []
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pycuda",
    "requests",
]

[project.urls]
Homepage = "https://github.com/fullmetalfelix/QMTools-pycuda"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.dynamic]
version = {attr = "qmtools.__version__"}
